# sambirion

./: cmd_vel_log.txt  cmd_vel_log.txtt  maplog.txt  start_sim_w_nav2.sh
plots/: trajectory_data.json
plots/trajectory/default/: analysis_report.txt  trajectory_data.json  trajectory_stats_20260213_220444.txt  trajectory_stats_20260213_220947.txt  trajectory_stats_20260213_221515.txt
plots/trajectory/prediction_ekf/: analysis_report.txt  trajectory_data.json  trajectory_stats_20260213_220718.txt  trajectory_stats_20260213_221213.txt
plots/trajectory/prediction_kf/: analysis_report.txt  trajectory_data.json  trajectory_stats_20260213_220557.txt  trajectory_stats_20260213_221103.txt  trajectory_stats_20260213_221622.txt
plots/trajectory/prediction_ukf/: analysis_report.txt  trajectory_data.json  trajectory_stats_20260213_220834.txt  trajectory_stats_20260213_221325.txt
src/analysis/: analyze_results.py  combine_trajectories.py  test_runner.py  traj_analyze_results.py
src/obstacle_detector_2/: .gitignore
src/obstacle_detector_2/launch/: nodes.launch.xml
src/sambirion_application/: CMakeLists.txt  package.xml  setup.cfg
src/sambirion_application/src/: goal_publisher.py  initial_pose_pub.cpp  joint_state_publisher_node.cpp  moving_obstacle_node.py  odometry_node.cpp  trajectory_plotter.py
src/sambirion_bringup/: CMakeLists.txt  package.xml
src/sambirion_bringup/launch/: sambirion_gazebo.launch.py  sambirion_gazebo_headless.launch.py  sambirion_state_publisher.launch.py
src/sambirion_description/: CMakeLists.txt  package.xml
src/sambirion_description/models/sambirion/: model.config  model.sdf  model.urdf
src/sambirion_description/models/sambirion/meshes/: 1.mtl
src/sambirion_description/models/test/: model.config  model.sdf
src/sambirion_gazebo/: CMakeLists.txt  package.xml
src/sambirion_gazebo/include/ros_gz_example_gazebo/: BasicSystem.hh  FullSystem.hh
src/sambirion_gazebo/src/: BasicSystem.cc  FullSystem.cc
src/sambirion_gazebo/worlds/: cubes.sdf  cubes_with_ball.sdf  depot.sdf  perimeter.sdf  sambirion.sdf  world.sdf
src/sambirion_navigation/: package.xml  setup.py
src/sambirion_navigation/launch/: nav2_bringup.launch.py  slam_toolbox.launch.py
src/sambirion_navigation/maps/: map.pgm  map.yaml
src/sambirion_navigation/params/: nav2_params.yaml  nav2_params_default.yaml
src/sambirion_navigation/sambirion_navigation/: __init__.py  joint_state_publisher.py
src/state_estimator/: README.md  package.xml  setup.cfg  setup.py
src/state_estimator/config/: kf_state_estimator.yaml
src/state_estimator/launch/: kf_state_estimator_launch.py  state_estimator_launch.py
src/state_estimator/state_estimator/: base_state_estimator.py  costmap_merger.py  ekf_state_estimator.py  kf_state_estimator.py  ukf_state_estimator.py
test_results/: results.json  results720.json  results_08_03_26_10it.json  results_09_03_26_20it.json  results_40runs_test1.json  results_40runs_test2_3.json  results_combined.json
